manifests/db_api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-api
  labels:
    app: db-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-api
  template:
    metadata:
      labels:
        app: db-api
    spec:
      containers:
        - name: db-api
          image: rachwest/edamame-db-api:latest
          ports:
            - containerPort: 4444
          volumeMounts:
            - name: pg-dump
              mountPath: /var/pg_dump
      volumes:
        - name: pg-dump
          emptyDir:
            sizeLimit: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: db-api-service
spec:
  selector:
    app: db-api
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 4444
      targetPort: 4444
      nodePort: 30001
