manifests/statsite_deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: statsd-service
spec:
  selector:
    app: statsite-server
  ports:
    - protocol: "UDP"
      port: 8125
      targetPort: 8125
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statsite-server
spec:
  selector:
    matchLabels:
      app: statsite-server
  replicas: 1
  template:
    metadata:
      labels:
        app: statsite-server
    spec:
      containers:
        - name: statsd
          image: lukeoguro/custom-statsite:2.0
          ports:
            - name: statsd
              containerPort: 8125
          volumeMounts:
            - name: config
              mountPath: /etc/statsite
      volumes:
        - name: config
          configMap:
            name: statsite-config
      tolerations:
        - key: special
          value: "sysctl-udp-buffer"
          effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: alpha.eksctl.io/nodegroup-name
                    operator: In
                    values:
                      - ng-agg
